[wcag] Fix group dataset count contrast colour

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -2958,4 +2958,10 @@ select, .select2-choice {
   color: @grey4;
 }
 
+// GROUP PAGES -------------------------------------------------------------------------------------
+
+.media-item span.count {
+  color: @grey4;
+}
+
 // MULTISEARCH FORM VIEWS ------------------------------------------------------------------------
